name:                   marep
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Simple match-and-replace utility for lists and texts with light-weight dependency
description:            MaRep is a simple match-and-replace utility for lists, strings and texts with light-weight dependency. See "Data.MaRep" for detail.
category:               Algorithms
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/marep
bug-reports:            https://github.com/debug-ito/marep/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings, StrictData
  other-extensions:     DeriveFunctor
  exposed-modules:      Data.MaRep
  other-modules:        Data.MaRep.Zipper
  build-depends:        base,
                        semigroups

-- executable marep
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports -rtsopts -threaded "-with-rtsopts=-N"
--   -- other-modules:        
--   default-extensions:   OverloadedStrings, StrictData
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  default-extensions:   OverloadedStrings, StrictData
  other-extensions:     ScopedTypeVariables
  other-modules:        Data.MaRepSpec
  build-depends:        base, marep, text, bytestring, semigroups,
                        hspec

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              DocTest.hs
  default-extensions:   OverloadedStrings, StrictData
  build-depends:        base,
                        doctest >=0.13,
                        doctest-discover >=0.1.0.7

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/marep.git
